# portfolio-display-case

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  ROADMAP.old.md  docker-compose.yml  portfolio-display-case.sln
.claude/skills/cv-tailoring/: SKILL.md
.github/: dependabot.yml
.github/workflows/: agent-api.yml  experience-api.yml  persona-api.yml  web.yml
docs/: runbook.md  security-audit.md
infra/terraform/: COSTS.md  main.tf  terraform.tfvars.example
services/agent-api/: AGENTS.md  Dockerfile  README.md  pyproject.toml
services/agent-api/app/: cv_render.py  cv_tailor.py  main.py  tools.py
services/agent-api/app/templates/: build_cv_template.py  cv_template.docx
services/agent-api/docs/: cv-tailoring.md
services/agent-api/tests/: test_cv_render.py  test_cv_tailor.py  test_main.py  test_tailor_dispatch.py  test_tools.py
services/experience-api/: Dockerfile  ExperienceApi.csproj  Program.cs  README.md  appsettings.json
services/experience-api/Configuration/: ServiceInfo.cs
services/experience-api/Controllers/: CvController.cs  DiagnosticsController.cs
services/experience-api/ExperienceApi.Tests/: EndpointTests.cs  ExperienceApi.Tests.csproj
services/experience-api/ExperienceApi.Unit.Tests/: ExperienceApi.Unit.Tests.csproj
services/experience-api/Models/: Achievement.cs  CvDocument.cs  Education.cs  ExperienceEntry.cs  Language.cs  MilitaryServiceEntry.cs  Profile.cs  Skills.cs
services/experience-api/Services/: CvDataService.cs  ICvDataService.cs
services/experience-api/data/: cv.json
services/persona-api/: Dockerfile  README.md  pyproject.toml
services/persona-api/app/: main.py
services/persona-api/data/: persona.json  professional.json
services/persona-api/tests/: test_main.py
tests/experience-api/ExperienceApi.Tests/: EndpointTests.cs  ExperienceApi.Tests.csproj
web/: .prettierignore  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  wrangler.jsonc
web/public/: robots.txt  sitemap.xml
web/src/: App.tsx  config.ts  index.css  test-setup.ts
web/src/__tests__/: ChatPanel.test.tsx  ExperienceTimeline.test.tsx  MilitaryService.test.tsx  PersonaSection.test.tsx  SkillsGrid.test.tsx  formatDate.test.ts
web/src/components/: ChatPanel.tsx  (+6 more)
(+7 files in other folders)
