[project]
name = "agent-api"
version = "0.1.0"
description = "Ask Tal — LLM agent with tool-calling against experience-api and persona-api"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "httpx>=0.28",
    "slowapi>=0.1.9",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"
