[project]
name = "agent-api"
version = "0.1.0"
description = "Ask Tal — LLM agent with tool-calling against experience-api and persona-api"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "anthropic>=0.116.0",
    "httpx>=0.28",
    "slowapi>=0.1.10",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"
